# rinstall

./: .build.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.yml  rinstall_root.yml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
config/root/: rinstall.yml
config/user/: rinstall.yml
contrib/: rpm.macros
src/: config.rs  config_impl.rs  dirs.rs  dirs_config.rs  dirs_config_impl.rs  generate_rpm_files.rs  generate_rpm_files_impl.rs  icon.rs  install.rs  install_cmd.rs  install_cmd_impl.rs  install_entry.rs  install_spec.rs  install_target.rs  main.rs  opts.rs  opts_impl.rs  package.rs  package_info.rs  project.rs  simple_logger.rs  string_or_struct.rs  tarball_cmd.rs  tarball_cmd_impl.rs  templating.rs  uninstall.rs  uninstall_impl.rs  utils.rs
