[package]
name = "rinstall"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0+"
authors = ["Danilo Spinella <danilo.spinella@suse.com>"]
keywords = ["packaging"]
repository = "https://github.com/danyspin97/rinstall"
homepage = "https://github.com/danyspin97/rinstall"
description = "Declarative install for programs"
categories = ["command-line-utilities"]

[dependencies]
blake3 = "1.4.1"
camino = { version = "1.1.6", features = [ "serde1" ] }
clap = { version = "4.3.21", features = ["derive", "env", "wrap_help", "help", "usage", "error-context"] }
color-eyre = { version = "0.6.2", default_features = false }
colored = "2.0.4"
json = "0.12.4"
lazy_static = "1.4.0"
libc = "0.2.147"
log = { version = "0.4.19", features = [ "std" ] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
xdg = "2.5.2"
walkdir = "2.3.3"
void = "1.0.2"

[build-dependencies]
clap = { version = "4.3.21", features = ["derive", "cargo", "env"] }
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
# used for the imports in src/config.rs
serde = { version = "1.0.183", features = ["derive"] }
